--- a/frontend/views/template/footermenu.html
+++ b/frontend/views/template/footermenu.html
@@ -1,9 +1,9 @@
-<div class="container-fluid">
+<div class="container-fluid footer-menu">
     <div class="row">
         <div class="col-md-2">
             <div>
-                <h4>Shop</h4>
-                <ul class="list-unstyled">
+                <h5 class="sec-head">Shop</h5>
+                <ul class="list-unstyled sec-content">
                     <li>
                         <a href="">Hair</a>
                     </li>
@@ -24,8 +24,8 @@
         </div>
         <div class="col-md-2">
             <div>
-                <h4>A Little Extra</h4>
-                <ul class="list-unstyled">
+                <h5 class="sec-head">A Little Extra</h5>
+                <ul class="list-unstyled sec-content">
                     <li>
                         <a href="">Hair</a>
                     </li>
@@ -46,24 +46,29 @@
         </div>
         <div class="col-md-4 col-md-offset-4">
             <div>
-                <p>Need Help?</p>
+                <p class="sec-head">Need Help?</p>
                 <p>Call Us: +91 98200 98200</p>
                 <p>Write to Us: <a href="">email@rawnature.com</a></p>
             </div>
+            <div class="social-icons">
+                <p class="inblock marg0">Find Us:</p>
+                <ul class="list-unstyled list-inline inblock sec-content">
+                    <li>
+                        <a href=""><img src="img/home/Facebook-Icon@4x.png" alt="" class="img-responsive icons"></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/home/Twitter-Icon@4x.png" alt="" class="img-responsive icons"></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/home/Instagram-Icon@4x.png" alt="" class="img-responsive icons"></a>
+                    </li>
+                </ul>
+            </div>
             <div>
-                <p>Find Us:
-                    <ul>
-                        <li>
-                            <a href=""></a>
-                        </li>
-                        <li>
-                            <a href=""></a>
-                        </li>
-                        <li>
-                            <a href=""></a>
-                        </li>
-                    </ul>
-                </p>
+                <ul class="list-inline list-unstyled terms-link">
+                    <li><a href="">Terms &amp; Condition</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                </ul>
             </div>
         </div>
 
